k3s/example/whoami/traefik/whoami-redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-redirect-https
  namespace: whoami
spec:
  redirectScheme:
    scheme: https
    permanent: true
