k3s/example/whoami/traefik/whoami-http-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-app-http-route
  namespace: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.test321.com`)
      kind: Rule
      middlewares:
        - name:  whoami-redirect-https
          namespace: whoami
      services:
        - name: whoami-service
          port: 80
